@@ -101,10 +101,11 @@ typedef struct xnheap {
 
 extern xnheap_t kheap;
 
-#define xnheap_size(heap)        ((heap)->extentsize)
-#define xnheap_page_size(heap)   ((heap)->pagesize)
-#define xnheap_page_count(heap)  ((heap)->npages)
-#define xnheap_used_mem(heap)    ((heap)->ubytes)
+#define xnheap_size(heap)            ((heap)->extentsize)
+#define xnheap_page_size(heap)       ((heap)->pagesize)
+#define xnheap_page_count(heap)      ((heap)->npages)
+#define xnheap_used_mem(heap)        ((heap)->ubytes)
+#define xnheap_max_contiguous(heap)  ((heap)->maxcont)
 #define xnheap_overhead(hsize,psize) \
 ((sizeof(xnextent_t) + (((hsize) - sizeof(xnextent_t)) / (psize)) + \
  XNHEAP_MINALIGNSZ - 1) & ~(XNHEAP_MINALIGNSZ - 1))
